Перенёс расширения для blade в бутстрап

--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "laravel": {
             "providers": [
 				"Qortex\\Bootstrap\\Providers\\BootstrapServiceProvider",
+				"Qortex\\Bootstrap\\Providers\\BladeServiceProvider",
 				"Qortex\\Bootstrap\\Providers\\FormServiceProvider"
             ]
         }
