--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^7.1.3",
-		"illuminate/support": "5.8.*|^6|^7",
+		"illuminate/support": "5.8.*|^6|^7|^8",
 		"laravelcollective/html": "^5.4.0|^6.1",
 		"yajra/laravel-datatables-oracle": "^9.0"
     },
