--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,9 @@
     "require": {
         "php": "^7.1.3",
 		"illuminate/support": "5.8.*|^6|^7",
-		"laravelcollective/html": "^5.4.0|^6.1",
-		"yajra/laravel-datatables-oracle": "^9.0"
+        "laravelcollective/html": "^5.4.0|^6.1",
+        "yajra/laravel-datatables-oracle": "^9.0",
+        "qortex/pug-editor": "^0.0.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^7",
