--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,15 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "^7.1.3",
-		"illuminate/support": "5.8.*|^6|^7",
-        "laravelcollective/html": "^5.4.0|^6.1",
-        "yajra/laravel-datatables-oracle": "^9.0",
+        "php": "^7.4|^8",
+		"illuminate/support": "|^7|^8",
+        "laravelcollective/html": "^5|^6",
+        "yajra/laravel-datatables-oracle": "^9",
         "qortex/pug-editor": "^0.0.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7",
-        "orchestra/testbench": "^3.8 || ^3.0"
+        "phpunit/phpunit": "^9",
+        "orchestra/testbench": "^6"
     },
     "autoload": {
 		"files": [
