--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^7.4|^8",
-		"illuminate/support": "|^7|^8",
+		"illuminate/support": "^7|^8",
         "laravelcollective/html": "^5|^6",
         "yajra/laravel-datatables-oracle": "^9",
         "qortex/pug-editor": "^0.0.5"
