--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9",
-        "orchestra/testbench": "^6"
+        "orchestra/testbench": "^6|^7"
     },
     "autoload": {
 		"files": [
