--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "GPL-3.0-or-later",
     "authors": [
         {
-            "name": "Qortex Dev Team",
+            "name": "Qortex Devs Team",
             "email": "welcome@qortex.ru"
         }
     ],
